--- a/app/src/main/res/layout/activity_categorias.xml
+++ b/app/src/main/res/layout/activity_categorias.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ActivityCategorias">
+    tools:context=".ActivityCategorias"
+    >
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/custom_actionbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/boton"
+        android:background="@color/verde"
         app:titleTextColor="@color/white"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         app:navigationIconTint="@android:color/white"
@@ -24,6 +25,8 @@
         android:layout_height="wrap_content"
         android:text="@string/tvCategorias"
         android:padding="@dimen/margin"
+        android:textSize="@dimen/text_size"
+        android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/custom_actionbar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
