--- a/app/src/main/res/layout/action_bar.xml
+++ b/app/src/main/res/layout/action_bar.xml
@@ -3,7 +3,7 @@
     android:id="@+id/custom_actionbar"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
-    android:background="@color/boton"
+    android:background="@color/verde"
     >
 
     <!-- ImageButton para la flecha de retroceso -->
