Detalle ticker mostly finished some TODOs

--- a/app/src/main/res/layout/activity_detalle_ticket.xml
+++ b/app/src/main/res/layout/activity_detalle_ticket.xml
@@ -111,6 +111,7 @@
                     android:layout_marginTop="@dimen/margin_cardview"
                     android:text="ESTADO"/>
                 <Spinner
+                    android:id="@+id/spinner"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/margin_cardview"/>
