--- a/app/src/main/res/layout/login_tab_fragment.xml
+++ b/app/src/main/res/layout/login_tab_fragment.xml
@@ -29,7 +29,8 @@
         android:paddingRight="20dp"
         android:paddingBottom="10dp"
         android:layout_marginTop="60dp"
-        android:text="admin@admin.com"/>
+        android:text="admin@admin.com"
+        android:drawableLeft="@drawable/ic_person"/>
     </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -55,7 +56,8 @@
             android:paddingTop="10dp"
             android:paddingRight="20dp"
             android:paddingBottom="10dp"
-            android:text="admin123"/>
+            android:text="admin123"
+            />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -86,6 +88,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginBottom="1.7in"
+
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
