--- a/app/src/main/res/layout/login_tab_fragment.xml
+++ b/app/src/main/res/layout/login_tab_fragment.xml
@@ -14,7 +14,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintWidth_percent="0.8"
-        android:layout_marginTop="70dp">
+        android:layout_marginTop="70dp"
+        app:startIconDrawable="@drawable/ic_person">
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/email"
@@ -29,8 +30,7 @@
         android:paddingRight="20dp"
         android:paddingBottom="10dp"
         android:layout_marginTop="60dp"
-        android:text="admin@admin.com"
-        android:drawableLeft="@drawable/ic_person"/>
+        android:text="admin@admin.com" />
     </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -43,7 +43,9 @@
         app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintWidth_percent="0.8">
+        app:layout_constraintWidth_percent="0.8"
+        app:startIconDrawable="@drawable/ic_lock_black_24dp"
+        >
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/password"
             android:inputType="textPassword"
@@ -57,6 +59,7 @@
             android:paddingRight="20dp"
             android:paddingBottom="10dp"
             android:text="admin123"
+
             />
 
     </com.google.android.material.textfield.TextInputLayout>
