--- a/app/src/main/res/layout/activity_detalle_ticket.xml
+++ b/app/src/main/res/layout/activity_detalle_ticket.xml
@@ -26,63 +26,64 @@
             android:animateLayoutChanges="true"
             android:orientation="vertical"
             android:padding="16dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_cardview"
+            android:orientation="horizontal">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text= "@string/tv_detalle_ticket"
-                android:textStyle="bold"
-                android:layout_marginBottom="@dimen/margin_cardview"/>
+                android:textSize="@dimen/text_size"
+                android:layout_weight="1"
+                android:textStyle="bold" />
+            <TextView
+                android:id="@+id/tvDetalleIdTicket"
+                android:layout_weight="1"
+                android:textAlignment="textEnd"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="#ID"/>
+        </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin"
                 android:orientation="horizontal">
-                <TextView
-                    android:id="@+id/tvDetalleIdTicket"
-                    android:layout_weight="6"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin_cardview"
-                    android:text="#ID"/>
                 <TextView
                     android:id="@+id/tvDetalleFechaIni"
                     android:layout_weight="1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin_cardview"
-                    android:textAlignment="textEnd"
                     android:text="FECHA INI"/>
                 <TextView
                     android:id="@+id/tvDetalleFechaFin"
-                    android:textAlignment="textEnd"
                     android:layout_weight="1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin_cardview"
                     android:text="FECHA FIN"/>
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_cardview"
                 android:orientation="horizontal">
-
                 <TextView
                     android:id="@+id/tvDetalleHoraIni"
-                    android:layout_width="239dp"
-                    android:textAlignment="textEnd"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:layout_marginTop="@dimen/margin_cardview"
-                    android:text="HORA INI" />
-                <TextView
-                    android:id="@+id/tvDetalleHoraFin"
-                    android:textAlignment="textEnd"
                     android:layout_weight="1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin_cardview"
+
+                    android:text="HORA INI" />
+                <TextView
+                    android:id="@+id/tvDetalleHoraFin"
+                    android:layout_weight="1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:text="HORA FIN"/>
             </LinearLayout>
 
@@ -90,7 +91,7 @@
                 android:id="@+id/tvDetalleTitulo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_cardview"
+                android:layout_marginTop="@dimen/margin"
                 android:text="TITULO"/>
             <TextView
                 android:id="@+id/tvDetalleDescripcion"
@@ -102,20 +103,19 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_cardview"
                 android:orientation="horizontal">
-
                 <TextView
                     android:id="@+id/tvDetalleEstado"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin_cardview"
                     android:text="ESTADO"/>
                 <Spinner
                     android:id="@+id/spinner"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin_cardview"/>
+                    android:layout_height="wrap_content"/>
             </LinearLayout>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -153,52 +153,41 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text= "@string/tv_detalle_cliente"
-                android:textStyle="bold"
-                android:layout_marginBottom="@dimen/margin_cardview"/>
+                android:textSize="@dimen/text_size"
+                android:textStyle="bold"/>
             <TextView
                 android:id="@+id/tvDetalleCliente"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_cardview"
+                android:layout_marginTop="@dimen/margin"
                 android:text="CLIENTE"/>
-            <LinearLayout
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/tvDetalleCalle"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <TextView
-                    android:id="@+id/tvDetalleCalle"
-                    android:layout_weight="6"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin_cardview"
-                    android:text="CALLE"/>
-                <TextView
-                    android:id="@+id/tvDetalleCP"
-                    android:layout_weight="1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin_cardview"
-                    android:text="CP"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_marginTop="@dimen/margin_cardview"
+                android:text="CALLE"/>
+            <TextView
+                android:id="@+id/tvDetalleCP"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <TextView
-                    android:id="@+id/tvDetalleMunicipio"
-                    android:layout_weight="1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin_cardview"
-                    android:text="MUNICIPIO"/>
-                <TextView
-                    android:id="@+id/tvDetalleProvincia"
-                    android:layout_weight="1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin_cardview"
-                    android:text="PROVINCIA"/>
-            </LinearLayout>
+                android:layout_marginTop="@dimen/margin_cardview"
+                android:text="CP"/>
+            <TextView
+                android:id="@+id/tvDetalleMunicipio"
+                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_cardview"
+                android:text="MUNICIPIO"/>
+            <TextView
+                android:id="@+id/tvDetalleProvincia"
+                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_cardview"
+                android:text="PROVINCIA"/>
+
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
@@ -225,28 +214,22 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text= "@string/tv_detalle_usuario"
-                android:textStyle="bold"
-                android:layout_marginTop="@dimen/margin_cardview"
-                android:layout_marginBottom="@dimen/margin_cardview"/>
-            <LinearLayout
-                android:layout_width="match_parent"
+                android:textSize="@dimen/text_size"
+                android:textStyle="bold"/>
+            <TextView
+                android:id="@+id/tvDetalleNomUsuario"
+                android:layout_weight="1"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <TextView
-                    android:id="@+id/tvDetalleNomUsuario"
-                    android:layout_weight="1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin_cardview"
-                    android:text="NOMBRE"/>
-                <TextView
-                    android:id="@+id/tvDetalleApellUsuario"
-                    android:layout_weight="1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin_cardview"
-                    android:text="APELLIDOS"/>
-            </LinearLayout>
+                android:layout_marginTop="@dimen/margin"
+                android:text="NOMBRE"/>
+            <TextView
+                android:id="@+id/tvDetalleApellUsuario"
+                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_cardview"
+                android:text="APELLIDOS"/>
             <TextView
                 android:id="@+id/tvDetalleTelfUsuario"
                 android:layout_width="wrap_content"
