--- a/app/src/main/res/layout/activity_tickets_list.xml
+++ b/app/src/main/res/layout/activity_tickets_list.xml
@@ -32,7 +32,7 @@
             android:layout_height="wrap_content"
             android:text="@string/tv_ticket_list_filtro"
             android:layout_marginEnd="8dp"
-            android:textSize="20dp"/>
+            android:textStyle="bold"/>
 
         <Spinner
             android:id="@+id/spinner_ticket_list"
