Working on password change logic

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -7,7 +7,7 @@
     android:layout_marginLeft="40dp"
     android:layout_marginRight="40dp"
     android:orientation="vertical"
-    tools:context=".persistence.ForgotPassword">
+    tools:context=".ForgotPasswordActivity">
 
     <ImageView
         android:layout_marginTop="70dp"
