Password rec logic finished + bug fixes at new ticket detail

--- a/app/src/main/res/layout/activity_set_new_password.xml
+++ b/app/src/main/res/layout/activity_set_new_password.xml
@@ -4,13 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SetNewPasswordActivity">
+    tools:context=".SetNewPasswordActivity"
+    android:orientation="vertical">
 
     <EditText
         android:id="@+id/etNewPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="Nueva contraseña"/>
+
+    <EditText
+        android:id="@+id/etNewPasswordConf"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="Confirmar contraseña"/>
 
     <Button
         android:id="@+id/btnSetNewPassword"
