--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginLeft="40dp"
-    android:layout_marginRight="40dp"
+    android:layout_height="match_parent"
+    android:padding="@dimen/margin"
     android:orientation="vertical"
+    android:background="@drawable/wave"
     tools:context=".ForgotPasswordActivity">
 
     <ImageView
@@ -22,47 +22,72 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:orientation="vertical">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="¿Olvidaste tu constraseña?"
-        android:textStyle="bold"
-        android:textSize="25sp"
-        android:layout_gravity="center"/>
 
-    <EditText
-        android:id="@+id/etRecuperarPass"
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_marginTop="20dp"
-        android:hint="Сorreo electrónico"
-        android:paddingLeft="16dp"
-        android:drawableLeft="@drawable/ic_person"
-        android:drawablePadding="15dp"
-        android:inputType="textEmailAddress"
-        />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/recuperar_contrasenia"
+            android:textStyle="bold"
+            android:textSize="25sp"
+            android:layout_gravity="center"/>
 
-    <Button
-        android:id="@+id/btnRecuperarPass"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
-        android:background="@drawable/button_bg"
-        android:text="Recuperar Contraseña"
-        android:textColor="@color/white"
-        android:textStyle="bold"
-        android:textSize="18sp"/>
+        <TextView
+            android:layout_marginTop="@dimen/margin"
+            android:id="@+id/tv_instructions"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/te_enviaremos_mail"
+            android:layout_gravity="center_horizontal" />
 
+        <EditText
+            android:id="@+id/etRecuperarPass"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:drawableLeft="@drawable/baseline_email_24"
+            android:drawablePadding="15dp"
+            android:hint="@string/email"
+            android:textSize="@dimen/text_size"
+            android:inputType="textEmailAddress" />
 
-    <TextView
-        android:layout_marginTop="20dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:text="Iniciar sesión"
-        android:layout_gravity="center"/>
+        <Button
+            android:id="@+id/btnRecuperarPass"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/button_bg"
+            android:text="@string/btn_enviar"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textSize="@dimen/text_size"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1.5"
+                android:text="@string/recordaste_contraseña"
+                android:layout_marginTop="20dp"
+                android:gravity="end"
+                android:textSize="@dimen/text_size_hint" />
+
+            <TextView
+                android:id="@+id/tvIniciarSesionRecuperarPass"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="20dp"
+                android:layout_weight="1"
+                android:gravity="start"
+                android:text="@string/iniciar_sesion"
+                android:textSize="@dimen/text_size_hint"
+                android:textStyle="bold" />
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
