--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,5 @@
     <dimen name="margin_btn">30dp</dimen>
     <dimen name="title_text_size">40sp</dimen>
     <dimen name="text_size_hint">12sp</dimen>
+    <dimen name="text_size_categorias">18sp</dimen>
 </resources>
