--- a/app/src/main/res/layout/activity_set_new_password.xml
+++ b/app/src/main/res/layout/activity_set_new_password.xml
@@ -9,23 +9,7 @@
     android:gravity="center"
     tools:context=".SetNewPasswordActivity"
     android:orientation="vertical">
-    <!--
-        <EditText
-            android:id="@+id/etNewPassword"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:textSize="@dimen/text_size"
-            android:hint="Nueva contraseña"/>
 
-        <EditText
-            android:id="@+id/etNewPasswordConf"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:textSize="@dimen/text_size"
-            android:hint="Confirmar contraseña"/>
-        -->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -33,6 +17,7 @@
         android:textStyle="bold"
         android:textSize="25sp"
         android:layout_gravity="center"/>
+
     <TextView
         android:layout_marginTop="@dimen/margin"
         android:layout_marginBottom="@dimen/margin"
@@ -83,6 +68,47 @@
             android:inputType="textPassword"/>
     </com.google.android.material.textfield.TextInputLayout>
 
+    <TextView
+        android:id="@+id/tvContenidoPasswordR"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/contenido_contrasenia"/>
+
+    <TextView
+        android:id="@+id/tvPasswordLength"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/password_length"
+        android:textColor="@color/red" />
+
+    <TextView
+        android:id="@+id/tvPasswordUppercase"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/password_uppercase"
+        android:textColor="@color/red" />
+
+    <TextView
+        android:id="@+id/tvPasswordLowercase"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/password_lowercase"
+        android:textColor="@color/red" />
+
+    <TextView
+        android:id="@+id/tvPasswordDigit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/password_digit"
+        android:textColor="@color/red" />
+
+    <TextView
+        android:id="@+id/tvPasswordSpecialChar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/password_special_char"
+        android:textColor="@color/red"
+        android:layout_marginBottom="@dimen/margin"/>
 
     <Button
         android:id="@+id/btnSetNewPassword"
@@ -92,5 +118,4 @@
         android:textColor="@color/white"
         android:textStyle="bold"
         android:text="@string/cambiar_contrasenia"/>
-
 </LinearLayout>
