--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -4,6 +4,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity">
 
+    <item android:id="@+id/mnDatos"
+        android:orderInCategory="300"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/baseline_account_circle_24"
+        android:title="@string/mn_datos_usuario"/>
+
     <item android:id="@+id/mnLogOut"
         android:title="@string/mn_cerrar_sesion"
         android:orderInCategory="200"
@@ -13,5 +19,10 @@
         android:title="@string/mn_salir_app"
         android:orderInCategory="300"
         app:showAsAction="never"/>
+
+
+
+
+
 
 </menu>
