--- a/app/src/main/res/layout/activity_detalle_usuario.xml
+++ b/app/src/main/res/layout/activity_detalle_usuario.xml
@@ -43,28 +43,6 @@
                 android:gravity="center"
                 android:textStyle="bold"/>
 
-            <!--ID CLIENTE-->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_cardview"
-                android:orientation="horizontal">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="2"
-                    android:layout_marginTop="@dimen/margin"
-                    android:text="ID: "/>
-
-                <TextView
-                    android:id="@+id/tvDatosUsuario"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="10"
-                    android:layout_marginTop="@dimen/margin"
-                    android:text=""/>
-            </LinearLayout>
-
             <!--EMAIL-->
             <LinearLayout
                 android:layout_width="match_parent"
@@ -143,7 +121,7 @@
                     android:layout_marginTop="@dimen/margin"
                     android:text="Teléfono:"/>
                 <TextView
-                    android:id="@+id/tvDatoTelef"
+                    android:id="@+id/tvDatosTelef"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="10"
@@ -207,7 +185,7 @@
                     android:layout_marginTop="@dimen/margin"
                     android:text="ID empresa:"/>
                 <TextView
-                    android:id="@+id/tvDatosIDEmpresa"
+                    android:id="@+id/tvDatosIdEmpresa"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="10"
@@ -234,6 +212,86 @@
                     android:layout_marginTop="@dimen/margin"
                     android:text=""/>
             </LinearLayout>
+
+            <!--Calle Empresa-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1.6"
+                    android:layout_marginTop="@dimen/margin"
+                    android:text="Calle:"/>
+                <TextView
+                    android:id="@+id/tvDatosCalleEmpresa"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="10"
+                    android:layout_marginTop="@dimen/margin"
+                    android:text=""/>
+            </LinearLayout>
+
+            <!--Provinica Empresa-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1.6"
+                    android:layout_marginTop="@dimen/margin"
+                    android:text="Provincia:"/>
+                <TextView
+                    android:id="@+id/tvDatosProvinciaEmpresa"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="10"
+                    android:layout_marginTop="@dimen/margin"
+                    android:text=""/>
+            </LinearLayout>
+
+            <!--Municipio Empresa-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1.6"
+                    android:layout_marginTop="@dimen/margin"
+                    android:text="Municipio:"/>
+                <TextView
+                    android:id="@+id/tvDatosMunicipioEmpresa"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="10"
+                    android:layout_marginTop="@dimen/margin"
+                    android:text=""/>
+            </LinearLayout>
+
+            <!--Código postal Empresa-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1.6"
+                    android:layout_marginTop="@dimen/margin"
+                    android:text="CP:"/>
+                <TextView
+                    android:id="@+id/tvDatosZipEmpresa"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="10"
+                    android:layout_marginTop="@dimen/margin"
+                    android:text=""/>
+            </LinearLayout>
         </LinearLayout>
 
 
@@ -241,7 +299,7 @@
 
     <Button
 
-        android:id="@+id/btnDetalleGuardar"
+        android:id="@+id/btnCambiarPw"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/button_bg"
